@startuml

package Services {
}

package Model {
interface AdditionalInfo {
    +path: string
}
interface ICommand {
    +action: CommandAction
    +content: JSON
    +additionalInfo?: AdditionalInfo
}
enum CommandAction {
    Save
    Respone
}
interface File {
    +name: string
    +content: string
    +extension: string
    +path: string
    +id: string
}
interface LanguageData {
    +files: File[]
    +language: string
}
interface ItemMenuData {
    +isSelected: boolean
    +onClick(): void
    +text: string
}
}


package Localization #DDDDDD{


class ViewLoader {
    -_panel: WebviewPanel
    -_extensionPath: string
    -_disposables: Disposable[]
    -updateLanguageFilesData(newLanguageFilesData: any): void
    -getWebviewContent(languageFilesData: any): string
}

class createLocalizationApp {
    +_extensionPath: string
    +_localizationPath: string
    +_onError: any

    +createLocalizationApp(extensionPath: string): void
    +activeLocalization(): void
    +handleNewLocalization(): Promise<void>
    +tryCreateLocalizationFiles(): void

}


class LocalizationDomain {
    +_localizationPath: string
    +_extensionProps: any
    +_fileService: any
    +_onError: any
    +activateLocalization(__0: { onError: any; }): void
    +filterSystemFiles(direntFiles: any): any
    +isSupportedFile(path: any): boolean
    +createLanguageFilesData(languageDir: any): LanguageData
    +getFiles: (path: string) => File[]
    +onSaveFile: (path: any, newData: any) => LanguageData[]
    +getLanguagesFilesData(): LanguageData[]
}
createLocalizationApp *--- LocalizationDomain
LocalizationDomain --- ViewLoader



package "WebView React" #999999 {
 ViewLoader <|--Index
  class Index {}
  class LocalizationContainer{}
  class Page{}
  class SideBarMenu{}
  class CompareToPanel{}
  class Text{}
  class FileContent{}

  Index <|-- LocalizationContainer
  LocalizationContainer --- Page
  LocalizationContainer --- SideBarMenu
  LocalizationContainer --- CompareToPanel
  LocalizationContainer --- Text
  LocalizationContainer --- FileContent
}

}

LocalizationDomain --- Services :uses
Localization --- Model :uses



@enduml



